--- a/pre29/src/main/AndroidManifest.xml
+++ b/pre29/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +15,7 @@
         android:theme="@style/Theme.Android10Snippet"
         tools:targetApi="28">
 
-        <activity android:name="com.example.android10snippet.MainActivity"
+        <activity android:name="com.example.pre29.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +24,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.example.android10snippet.DeviceAdminReceiver"
+        <receiver android:name="com.example.pre29.DeviceAdminReceiver"
             android:label="@string/sample_device_admin"
             android:description="@string/sample_device_admin_description"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
