--- a/post29/build.gradle
+++ b/post29/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.google.android.material:material:$material_version"
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$test_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
