--- a/post29/build.gradle
+++ b/post29/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.google.android.material:material:$material_version"
     implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation "androidx.media:media:1.3.0"
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$test_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
